--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,8 +29,8 @@
 
 // 6. Page-specific styles
 @import
-  'pages/home';
-
+  'pages/home',
+  'pages/login';
 // 7. Themes
 @import
   'themes/default';
